--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^2.2.0",
+    "es6-promise": "^2.3.0",
     "promiseify": "^0.2.0",
     "request": "^2.60.0"
   },
